[gd_scene load_steps=6 format=3 uid="uid://dbyc3jj4ce3bx"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_0a67q"]
[ext_resource type="Texture2D" uid="uid://bovvom8awo27x" path="res://assets/background/TileSet v1.0 (1).png" id="2_b2181"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m4cvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xe8vg"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_g157p"]
polygon = PackedVector2Array(-2.44357, 9.16731, -2.44357, 0.479482, 2.33359, 0.479482, 2.15445, 9.19676)

[node name="Door" type="CharacterBody2D"]
scale = Vector2(8.066, 16.359)
script = ExtResource("1_0a67q")
openable = true

[node name="Door" type="Area2D" parent="."]
scale = Vector2(0.0742682, 0.147601)
collision_mask = 2

[node name="downWall" type="Sprite2D" parent="Door"]
position = Vector2(0, 33.875)
scale = Vector2(2.04762, 1.98202)
texture = ExtResource("2_b2181")
region_enabled = true
region_rect = Rect2(33.013, 97.3326, 29.2298, 30.2831)

[node name="upWall" type="Sprite2D" parent="Door"]
position = Vector2(0, -26.273)
scale = Vector2(2.04762, 1.98202)
texture = ExtResource("2_b2181")
region_enabled = true
region_rect = Rect2(33.013, 97.3326, 29.2298, 30.2831)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
scale = Vector2(12.9114, -0.828855)
shape = SubResource("RectangleShape2D_m4cvm")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Hitbox2" type="CollisionShape2D" parent="."]
position = Vector2(-0.214397, 4.59499)
scale = Vector2(0.230911, 0.464581)
shape = SubResource("RectangleShape2D_xe8vg")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.117019, -4.27722)
scale = Vector2(0.230911, 0.464581)
shape = SubResource("RectangleShape2D_xe8vg")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_g157p")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
position = Vector2(0.10043, -10.104)
occluder = SubResource("OccluderPolygon2D_g157p")

[connection signal="body_entered" from="Door" to="." method="_on_door_body_entered"]
[connection signal="body_exited" from="Door" to="." method="_on_door_body_exited"]
